# zcash-frost-tools

./: .gitignore  Cargo.toml  TAPROOT_FIX.md  TAPROOT_INTEGRATION_TESTS.md  TAPROOT_TEST_SUMMARY.md  codex-setup.sh  test-frost-keygen.sh  test-frost-taproot.sh
frost-client/: Cargo.toml
frost-client/src/: lib.rs
frost-client/src/cli/: args.rs  config.rs  coordinator.rs  dkg.rs  participant.rs  trusted_dealer.rs
frost-client/src/coordinator/: args.rs  cli.rs  main.rs  round_2.rs
frost-client/src/participant/: main.rs
frost-client/src/trusted_dealer/: args.rs  inputs.rs  mod.rs  trusted_dealer_keygen.rs
frost-client/src/util/: mod.rs  taproot.rs
frostd/tests/: integration_tests.rs
tests/: Cargo.toml
tests/tests/: cli_integration_test.rs  taproot_integration_test.rs
