[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
frost-ed25519 = { workspace = true, features = ["serde"] }
reddsa = { workspace = true, features = ["frost"] }
hex = { workspace = true }
rand = { workspace = true }
exitcode = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tempfile = "3.0"

[dev-dependencies]
frost-ed25519 = { workspace = true, features = ["serde"] }
frost-secp256k1-tr = { workspace = true, features = ["serde"] }
frost-core = { workspace = true, features = ["serde"] }
frost-client = { workspace = true }
frostd = { workspace = true }
rand = { workspace = true }
tempfile = "3.8"
serde_json = { workspace = true }
bitcoin = { workspace = true }

[features]
default = []
